k8s/beta.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: fint-core-provider-gateway-service
  name: fint-core-provider-gateway-service
spec:
  ports:
    - port: 8080
  type: ClusterIP
  selector:
    io.kompose.service: fint-core-provider-gateway-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    io.kompose.service: fint-core-provider-gateway
  name: fint-core-provider-gateway
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      io.kompose.service: fint-core-provider-gateway
  template:
    metadata:
      labels:
        io.kompose.service: fint-core-provider-gateway
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "provider/actuator/prometheus"
    spec:
      restartPolicy: Always
      volumes:
        - name: credentials
          secret:
            secretName: aiven-kafka-certificates
      containers:
        - image: fintlabsacr.azurecr.io/fint-core-provider-gateway:dummy
          name: fint-core-provider-gateway
          volumeMounts:
            - name: credentials
              mountPath: /credentials
          resources:
            limits:
              memory: "1152Mi"
              cpu: "1"
            requests:
              memory: "512Mi"
              cpu: "100m"
          ports:
            - containerPort: 8080
